feat(statistics): balance graph